--- a/css/style.css
+++ b/css/style.css
@@ -73,17 +73,9 @@
     line-height: 64px;
     font-weight: 500;
     text-transform: uppercase;
-    opacity: 0; 
-    transform: translateY(20px); 
-    animation: fadeInUp 1s forwards; 
 }
 
-@keyframes fadeInUp {
-    to {
-        opacity: 1; 
-        transform: translateY(0); 
-    }
-}
+
 .content_wrapper
 {
     padding: 60px 20px;
@@ -143,8 +135,22 @@
     padding: 0 50px;
     display: inline-block;
     text-decoration: none;    
+    transition: all .5s ease;
 }
-
+.order_button:hover
+{
+    background: #0B82B6;
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 700;
+    border-radius: 26px;
+    padding: 0 50px;
+    display: inline-block;
+    text-decoration: none;  
+    box-shadow: 0 5px 15px #9c9c9c; 
+}
 
 .button_light
 {
@@ -159,8 +165,23 @@
     padding: 0 50px;
     display: inline-block;
     text-decoration: none;
+    transition: all .5s ease;
 }
-
+.button_light:hover
+{
+    background: #0fa8ea;
+    color: #fff;
+	border: 1px solid #0fa8ea;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 700;
+    border-radius: 26px;
+    padding: 0 50px;
+    display: inline-block;
+    text-decoration: none;
+    box-shadow: 0 5px 15px #9c9c9c; 
+}
 
 .order_title
 {
@@ -192,39 +213,4 @@
 {
     background: #e8e6eb;
     text-align: center;
-}
-.goods_block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    opacity: 0; 
-    transition: opacity 0.5s ease; 
-}
-
-.goods_block_loaded {
-    opacity: 1; 
-}
-
-.order_text_wrapper {
-    max-width: 430px;
-    margin-right: 20px; 
-    transform: translateX(-50px); 
-    opacity: 0; 
-    transition: opacity 0.5s ease, transform 0.5s ease; 
-}
-
-.order_picture_wrapper {
-    transform: translateX(50px);
-    opacity: 0; 
-    transition: opacity 0.5s ease, transform 0.5s ease; 
-}
-
-.goods_block_loaded .order_text_wrapper {
-    transform: translateX(0); 
-    opacity: 1; 
-}
-
-.goods_block_loaded .order_picture_wrapper {
-    transform: translateX(0); 
-    opacity: 1; 
 }
