--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@
 
 .form
 {
-    height: 514px;
+    height: 736px;
     background: #E8E6EB;
     text-align: center;
     margin-top: 159px;
@@ -259,7 +259,7 @@
     width: 539px;
     margin: auto;
     text-align: left;
-    margin-top: 36px;
+    margin-top: 15px;
 }
 .email_img
 {
@@ -271,7 +271,7 @@
 
 .form_input
 {
-    width: 456px;
+    width: 506px;
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     line-height: 52px;
@@ -282,8 +282,10 @@
     border-radius: 31px;
     display: inline-block;
     text-decoration: none;
-    padding-left: 81px;
     transition: all .5s ease;
+    margin-top: 19px;
+    padding-left:30px;
+    cursor: pointer;
 }
 .form_button
 {
@@ -300,9 +302,87 @@
     display: inline-block;
     text-decoration: none;
     transition: all .5s ease;
-    margin-top: 19px;
+    cursor: pointer;
 
 }
+
+.form_button:hover
+{
+    background: #0B82B6;
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 700;
+    border-radius: 26px;
+    padding: 0 50px;
+    display: inline-block;
+    text-decoration: none;  
+    box-shadow: 0 5px 15px #9c9c9c; 
+}
+
+.wrapper {
+    margin: 30px;
+    margin-right: 0px;
+    display: inline-block;
+
+}
+.checkbox 
+{
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+.checkbox+label 
+{
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+
+}
+.checkbox+label::before 
+{
+    content: '';
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 10px;
+    border: 1px solid #676b6e;
+    border-radius: 0.15em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: #fff;
+    transition: all .3s ease;
+    
+}
+.checkbox:checked+label::before 
+{
+    border-color: #4995eb;
+    background-color: #4995eb;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+    
+}
+/* стили при наведении курсора на checkbox */
+.checkbox:not(:disabled):not(:checked)+label:hover::before {
+    border-color: #b3d7ff;
+  }
+  /* стили для активного состояния чекбокса (при нажатии на него) */
+  .checkbox:not(:disabled):active+label::before {
+    background-color: #b3d7ff;
+    border-color: #b3d7ff;
+  }
+
+  /* стили для чекбокса, находящегося в состоянии disabled */
+  .checkbox:disabled+label::before {
+    background-color: #e9ecef;
+  }
+.img_arrow
+{
+    position: relative;
+    bottom: 74px;
+}
+
 
 
 .bottom_menu
